; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_javascript.c_script__set_last_error.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_javascript.c_script__set_last_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @script__set_last_error to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @script__set_last_error(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i8* @js_tostring(i32* %4, i32 1)
  store i8* %5, i8** %3, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = call i32 @jctx(i32* %6)
  %8 = load i8*, i8** %3, align 8
  %9 = getelementptr inbounds i8, i8* %8, i64 0
  %10 = load i8, i8* %9, align 1
  %11 = load i8*, i8** %3, align 8
  %12 = call i32 @set_last_error(i32 %7, i8 signext %10, i8* %11)
  ret void
}

declare dso_local i8* @js_tostring(i32*, i32) #1

declare dso_local i32 @set_last_error(i32, i8 signext, i8*) #1

declare dso_local i32 @jctx(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
